--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     </div>
                 </div>
                 <div class="col-md-6">
-                    <img class="mt-9 img-fluid gs_reveal" src="assets/images/banner-chip.png" alt="banner-img" />
+                    <img class="mt-9 img-fluid gs_reveal" src="assets/images/banner-chip.webp" alt="banner-img" />
                 </div>
             </div>
         </div>
@@ -82,15 +82,15 @@
                     <div class="row g-3 g-md-0">
                         <div class="col-md-7 col-lg-12">
                             <div class="right-text-wrapper">
-                                <div class="row g-3 g-md-4 mt-md-3 mt-lg-0">
-                                    <div class="col-sm-6 col-md-6 gs_reveal">
-                                        <div class="statistics mt-4 mt-sm-0">
+                                <div class="row g-3 g-md-4 mt-4 mt-md-3 mt-lg-0">
+                                    <div class="col-6 col-md-6 gs_reveal">
+                                        <div class="statistics mt-0">
                                             <h3 class="fs-32 fs-lg-56 fs-xl-56 fw-600 text-black">25+</h3>
                                             <p>Countries <br> Presence
                                             </p>
                                         </div>
                                     </div>
-                                    <div class="col-sm-6 col-md-6 gs_reveal">
+                                    <div class="col-6 col-md-6 gs_reveal">
                                         <div class="statistics">
                                             <h3 class="fs-32 fs-lg-56 fs-xl-56 fw-600 text-black">75+</h3>
                                             <p>Equipment Manufacturers<br> Trusting our services
@@ -102,7 +102,7 @@
                         </div>
                         <div class="col-md-5 col-lg-12">
                             <div class="pt-4 pt-lg-10 gs_reveal">
-                                <img src="assets/images/about-img.png" alt="about-image" />
+                                <img src="assets/images/about-img.webp" alt="about-image" />
                             </div>
                         </div>
                     </div>
@@ -119,7 +119,7 @@
             <div class="features-wrapper">
                 <div class="row justify-content-center">
                     <div class="col-xxl-10 col-lg-10">
-                        <div class="row g-0">
+                        <div class="row g-0 p-1px">
                             <div class="col-6 col-lg-3">
                                 <div class="equal-1-1 c1 gs_reveal">
                                     <div class="card ms-0">
@@ -228,7 +228,7 @@
                             <div class="row g-0">
                                 <div class="col-xl-4">
                                     <div class="img-wrap p-5 flex-center bg-tertiary h-100">
-                                        <img src="assets/images/C42GM.png" alt="listing-thumbnail" />
+                                        <img src="assets/images/C42GM.webp" alt="listing-thumbnail" />
                                     </div>
                                 </div>
                                 <div class="col-xl-8">
@@ -272,7 +272,7 @@
                             <div class="row g-0">
                                 <div class="col-xl-4">
                                     <div class="img-wrap p-5 flex-center bg-tertiary h-100">
-                                        <img src="assets/images/C42GM.png" alt="listing-thumbnail" />
+                                        <img src="assets/images/C42GM.webp" alt="listing-thumbnail" />
                                     </div>
                                 </div>
                                 <div class="col-xl-8">
@@ -316,7 +316,7 @@
                             <div class="row g-0">
                                 <div class="col-xl-4">
                                     <div class="img-wrap p-5 flex-center bg-tertiary h-100">
-                                        <img src="assets/images/C42GM.png" alt="listing-thumbnail" />
+                                        <img src="assets/images/C42GM.webp" alt="listing-thumbnail" />
                                     </div>
                                 </div>
                                 <div class="col-xl-8">
@@ -360,7 +360,7 @@
                             <div class="row g-0">
                                 <div class="col-xl-4">
                                     <div class="img-wrap p-5 flex-center bg-tertiary h-100">
-                                        <img src="assets/images/C42GM.png" alt="listing-thumbnail" />
+                                        <img src="assets/images/C42GM.webp" alt="listing-thumbnail" />
                                     </div>
                                 </div>
                                 <div class="col-xl-8">
@@ -404,7 +404,7 @@
                             <div class="row g-0">
                                 <div class="col-xl-4">
                                     <div class="img-wrap p-5 flex-center bg-tertiary h-100">
-                                        <img src="assets/images/C42GM.png" alt="listing-thumbnail" />
+                                        <img src="assets/images/C42GM.webp" alt="listing-thumbnail" />
                                     </div>
                                 </div>
                                 <div class="col-xl-8">
@@ -448,7 +448,7 @@
                             <div class="row g-0">
                                 <div class="col-xl-4">
                                     <div class="img-wrap p-5 flex-center bg-tertiary h-100">
-                                        <img src="assets/images/C42GM.png" alt="listing-thumbnail" />
+                                        <img src="assets/images/C42GM.webp" alt="listing-thumbnail" />
                                     </div>
                                 </div>
                                 <div class="col-xl-8">
@@ -492,7 +492,7 @@
                             <div class="row g-0">
                                 <div class="col-xl-4">
                                     <div class="img-wrap p-5 flex-center bg-tertiary h-100">
-                                        <img src="assets/images/C42GM.png" alt="listing-thumbnail" />
+                                        <img src="assets/images/C42GM.webp" alt="listing-thumbnail" />
                                     </div>
                                 </div>
                                 <div class="col-xl-8">
@@ -1354,8 +1354,7 @@
                 <div class="col-xxl-10 col-lg-10">
                     <div class="bg-white-7 py-md-5 py-xl-10 p-40px gs_reveal">
                         <div class="d-flex align-items-center gap-3 gs_reveal">
-                            <input type="email" class="form-control fs-24 py-4"
-                                placeholder="Enter your email address to subscribe">
+                            <input type="email" class="form-control fs-24 py-4" placeholder="Enter your email address">
                             <button type="button" class="btn btn-primary btn-icon btn-primary-animate p-0 send-button">
                                 <span>
                                     <i class="ri-send-plane-2-line fs-30"></i>
@@ -1434,7 +1433,7 @@
                     <div class=" row g-0">
                         <div class="col-lg-4 ">
                             <div class="img-wrap p-5 flex-center bg-tertiary h-100">
-                                <img src="assets/images/C42GM.png" alt="listing-thumbnail">
+                                <img src="assets/images/C42GM.webp" alt="listing-thumbnail">
                             </div>
                         </div>
                         <div class="col-lg-8">
