--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                             generation of IoT connectivity management technology with our line of intelligent hardware,
                             network access solution and modem management cloud</p>
                         <div class="d-inline-flex gap-3">
-                            <button type="button" class="btn btn-primary btn-primary-animate gs_reveal"><span>Order
+                            <button type="button" class="btn btn-primary btn-primary-animate"><span>Order
                                     Samples</span></button>
                             <button type="button"
                                 class="btn btn-outline-white btn-outline-primary-animate gs_reveal"><span>Watch
